expense/frontend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    app: frontend
    project: expense
spec:
  type: NodePort
  selector:
    app: frontend
    project: expense
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
