expense/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-ingress
  annotations:
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/target-type: ip
        alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
        alb.ingress.kubernetes.io/group.name: ullagallu
        alb.ingress.kubernetes.io/group.order: '10'

spec:
  ingressClassName: alb
  rules:
  - host: "expense.test.ullagallu.cloud"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-ingress
  annotations:
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/target-type: ip
        alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
        alb.ingress.kubernetes.io/group.name: ullagallu
        alb.ingress.kubernetes.io/group.order: '10'
        alb.ingress.kubernetes.io/ssl-redirect: "true"  # Optional, to redirect HTTP to HTTPS
spec:
  ingressClassName: alb
  rules:
  - host: "expense.test.ullagallu.cloud"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
